# pilot-whale

./: .gitignore  Justfile  README.md  com.github.jumpyvi.pilot-whale.yml  com.github.sdv43.whaler.json  com.github.sdv43.whaler.json~  com.github.sdv43.whaler.yml  dev.Dockerfile  flake.nix  index.html  meson.build  uncrustify.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
com.github.jumpyvi.pilot-whale/: Build.APPLICATION_ID.html  Build.DATADIR.html  Build.GETTEXT_PACKAGE.html  Build.GNOMELOCALEDIR.html  Build.INSTALL_PREFIX.html  Build.LOCALEDIR.html  Build.PROFILE.html  Build.VERSION.html  Build.html  Docker.Container.html  Docker.Container.id.html  Docker.Container.image.html  Docker.Container.label_config.html  Docker.Container.label_project.html  Docker.Container.label_service.html  Docker.Container.label_workdir.html  Docker.Container.name.html  Docker.Container.state.html  Docker.html  PilotWhale.Application.Application.html  PilotWhale.Application.activate.html  PilotWhale.Application.html  PilotWhale.Window.Window.html  PilotWhale.Window.html  PilotWhale.html  Utilities.Reloader.Reloader.html  Utilities.Reloader.html  Utilities.Reloader.reload.html  Utilities.html  Widgets.ScreenManager.get_instance.html  Widgets.ScreenManager.html  Widgets.ScreenManager.screen_error_show_widget.html  Widgets.ScreenManager.show_toast_with_content.html  Widgets.Screens.Main.ContainersGrid.CODE.html  Widgets.Screens.Main.ContainersGrid.ContainersGrid.html  Widgets.Screens.Main.ContainersGrid.html  Widgets.Screens.Main.html  Widgets.Screens.html  Widgets.Utils.BackButton.BackButton.html  Widgets.Utils.BackButton.html  (+8 more)
com.github.sdv43.whaler/: Build.APPLICATION_ID.html  Build.DATADIR.html  Build.GETTEXT_PACKAGE.html  Build.INSTALL_PREFIX.html  Build.html  Utilities.Reloader.Reloader.html  Utilities.Reloader.html  Utilities.Reloader.reload.html  Utilities.html  Whaler.Application.Application.html  Whaler.Application.html  Whaler.Window.Window.html  Whaler.Window.html  Widgets.ScreenManager.get_instance.html  Widgets.ScreenManager.html  Widgets.ScreenManager.show_toast_with_content.html  Widgets.Screens.Main.ContainersGrid.html  Widgets.Screens.Main.html  Widgets.Utils.BackButton.html  Widgets.Utils.DockerContainerStatusLabel.html  Widgets.Utils.ImagesSearchButton.ImagesSearchButton.html  Widgets.Utils.ImagesSearchButton.html  Widgets.Utils.ReloadButton.html  Widgets.Utils.html  index.htm
data/: com.github.jumpyvi.blubber.appdata.xml.in  com.github.jumpyvi.blubber.desktop.in  com.github.jumpyvi.pilot-whale.appdata.xml.in  com.github.jumpyvi.pilot-whale.desktop.in  com.github.sdv43.whaler.desktop.in  com.github.sdv43.whaler.gschema.xml  com.github.sdv43.whaler.metainfo.xml.in  com.github.sdv43.whaler.service.in  gresource.xml  gschema.xml  meson.build
data/icons/: meson.build
data/resources/stylesheets/: animations.css  index.css  terminal.css  widgets.css
docs/com.github.sdv43.whaler/: Build.GNOMELOCALEDIR.html  Build.LOCALEDIR.html  Build.PROFILE.html  Build.VERSION.html  Utils.Reloader.Reloader.html  Utils.Reloader.html  Utils.Reloader.reload.html  Utils.html  Whaler.Application.activate.html  Whaler.Application.html  Whaler.Window.html  Whaler.html  Widgets.ScreenManager.html  Widgets.ScreenManager.screen_error_show_widget.html  Widgets.Screens.Main.ContainersGrid.CODE.html  Widgets.Screens.Main.ContainersGrid.ContainersGrid.html  Widgets.Screens.Main.ContainersGrid.html  Widgets.Screens.html  Widgets.Utils.BackButton.BackButton.html  Widgets.Utils.BackButton.html  Widgets.Utils.DockerContainerStatusLabel.html  Widgets.Utils.ImagesSearchButton.html  Widgets.Utils.ReloadButton.ReloadButton.html  Widgets.Utils.ReloadButton.html  Widgets.html  index.htm
po/: POTFILES  POTFILES.in  com.github.jumpyvi.pilot-whale.pot  com.github.sdv43.whaler.pot  cs.po  en.po  fr.po  it.po  meson.build  ru.po
src/: Build.vala.in  application.vala  blubber.gresource.xml  config.vapi  main.vala  meson.build  pilot-whale.gresource.xml  whaler.gresource.xml  window.ui  window.vala
src/Docker/: ApiClient.vala  ContainerLogWatcher.vala
src/State/: Root.vala  ScreenDockerContainer.vala  ScreenDockerContainerState.vala  ScreenMain.vala  ScreenMainState.vala
src/Utilities/: ActionHandler.vala  Constants.vala.in  DockerContainer.vala  Helpers.vala  HttpClient.vala  Reloader.vala
src/Utilities/Sorting/: SortingInterface.vala  SortingName.vala  SortingStatus.vala  SortingType.vala
src/Utils/: Helpers.vala  ReloadButton.vala
src/Widgets/: ScreenDockerContainer.vala  ScreenError.vala  ScreenMain.vala  ScreenManager.vala
src/Widgets/Dialogs/: ContainerInfoDialog.vala  ImagesSearchDialog.vala  SettingsWindow.vala
src/Widgets/Dialogs/ImagesManager/: ImageManagerView.vala  ImagePullerView.vala  ImagesDialog.vala  LocalImageCard.vala  LocalImageView.vala
src/Widgets/Screens/DockerContainer/: LogViewer.vala  SideBar.vala  SideBarItem.vala  SideBarSeparator.vala  TopBar.vala  TopBarActions.vala
src/Widgets/Screens/Main/: ContainerCard.vala  ContainerCardActions.vala  ContainersGrid.vala  ContainersGridFilter.vala
src/Widgets/Screens/Main/DockerContainer/: Log.vala.bckp  SideBar.vala  SideBarSeparator.vala  TopBar.vala  TopBarActions.vala
src/Widgets/Utils/: ActionMenu.vala  BackButton.vala  ContainerInfoDialog.vala  DockerContainerStatusLabel.vala  ImageCard.vala  ImagesSearchBar.vala  ImagesSearchButton.vala  MainAction.vala  PullButton.vala  ReloadButton.vala  SettingsWindow.vala
tests/: ApiClient.test.vala  ApiClientTest.vala  Helpers.test.vala  HttpClient.test.vala  Template.test.vala  exemple.test.vala  meson.build  template.test.vala
tests/Utils/: TestsSyntaxHighlighter.vala
